[gd_scene load_steps=5 format=3 uid="uid://bwq24iesva6g5"]

[ext_resource type="Script" uid="uid://ifdtrybv01fn" path="res://Interactables/table.gd" id="1_v5i0k"]
[ext_resource type="Texture2D" uid="uid://dulj1u1jji7kx" path="res://Assets/Table.png" id="2_kl0hw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_67vji"]
radius = 142.127

[sub_resource type="CircleShape2D" id="CircleShape2D_vjl2i"]
radius = 75.2861

[node name="Table" type="CharacterBody2D"]
script = ExtResource("1_v5i0k")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_67vji")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vjl2i")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
render_target_update_mode = 4

[node name="Sprite2d" type="Sprite2D" parent="SubViewportContainer"]
position = Vector2(0, 1)
scale = Vector2(0.298, 0.324903)
texture = ExtResource("2_kl0hw")

[node name="Label" type="Label" parent="."]
offset_left = -44.0
offset_top = -10.0
offset_right = 47.0
offset_bottom = 13.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
